[package]
name = "nmea0183-core"
version = "0.1.2"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
description = "implement NMEA0183 protocol without parsing floating point"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "1.0"

[dev-dependencies]
pretty_assertions = "0.4"
